# ORIC-video-to-VGA

./: BOM_ORIC_VGA_VIDEO.csv  README.md
PCB/: PickAndPlace_ORIC_VGA_PCB.csv
firmware/: green_vga_upscaler.uf2
firmware/SRC/: CMakeLists.txt  HardwareDefines.hpp  green_vga_upscaler.c  initPIO.h  vga_graphics.c  vga_graphics.h
firmware/SRC/images/: logo.h
firmware/SRC/pio/: RGB_Capture.pio  hsync.pio  rgb.pio  vsync.pio
